@@ -4,7 +4,9 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.4.0-pre14
 ==============================
  -- Fix bug in preservation of advanced reservations when slurmctld restarts.
- -- updated perlapi to match correctly with slurm.h structures
+ -- Updated perlapi to match correctly with slurm.h structures
+ -- Do not build the srun command on BlueGene systems (mpirun must be used to
+    launch tasks).
 
 * Changes in SLURM 1.4.0-pre13
 ==============================
